# todo-app-with-chatbot

./: .gitignore  CLAUDE.md  RUN_INSTRUCTIONS.md  SOLUTION_SUMMARY.md  chat.txt  vercel.json
.claude/: settings.local.json
.claude/agents/: betterauth-specialist.md  code-quality-checker.md  nextjs-frontend-dev.md  nextjs-frontend-reviewer.md
Back-End/: Dockerfile  README.md  alembic.ini  requirements.txt
Back-End/alembic/: env.py  script.py.mako
Back-End/alembic/versions/: 001_initial_schema.py  002_add_chat_tables.py  003_add_last_message_column.py
Back-End/src/: chatbot.py  database.py  dependencies.py  hf_inference.py  main.py
Back-End/src/api/: auth.py  errors.py  routes.py  tasks.py
Back-End/src/auth/: __init__.py  jwt.py  password.py
Back-End/src/models/: __init__.py  chat.py  nlp_command.py  parsed_command.py  task.py  todo_operation.py  (+3 more)
console-app/: .gitignore  ALERTS-GUIDE.md  QUICKSTART.md  README.md  TEST-RESULTS.md  agent.md  main.py  prompt.md  pyproject.toml  tasks.json  test_manual.sh
console-app/src/: __init__.py  app.py  app_interactive.py  commands.py  models.py  storage.py  ui.py
front/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
front/.claude/: settings.local.json
front/__tests__/: chat-integration.test.tsx  chat-interface.test.tsx
front/app/: Providers.tsx  layout.tsx  page.tsx
front/components/: ChatWidget.tsx
front/hooks/: useAuth.tsx
front/services/: message-service.ts  realtime-service.ts  session-service.ts
front/types/: api.ts  message.ts  session.ts  task.ts  ui-state.ts  user.ts
(+38 files in other folders)
