[project]
name = "console-todo"
version = "1.0.0"
description = "A beautiful console-based todo application with Rich UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
todo = "src.app_interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
